[package]
name = "gap-the-mind-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
ropey = "1"
wasm-logger = "0.2"
yew = "0.19"
gloo = "0.7"
pulldown-cmark = "0.9"
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "0.3"
features = ["Selection", "Range"]

[dev-dependencies]
html5ever = "0.25"
markup5ever_rcdom = "0.1"
lazy_static = "1.4"
tendril = "0.4"
regex = "1.3"
